# gb

./: .gitignore  Cargo.toml  README.md
src/: console.rs  cpu.rs  lcd.rs  lib.rs  main.rs  peripherals.rs  work_ram.rs
src/cpu/: decode.rs  instruction.rs  operand.rs  registers.rs
src/cpu/instruction/: bit.rs  call.rs  cp.rs  dec.rs  inc.rs  jr.rs  ld.rs  nop.rs  pop.rs  push.rs  ret.rs  rl.rs
src/cpu/operand/: cond.rs  direct16.rs  direct8.rs  imm16.rs  imm8.rs  indirect.rs  reg16.rs  reg8.rs
src/peripherals/: boot_rom.rs  high_ram.rs  ppu.rs
