[package]
name = "gb"
version = "0.1.0"
edition = "2021"

[lib]
name = "gb"
path = "src/lib.rs"

[[bin]]
name = "gb"
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.18", features = ["derive"] }
env_logger = "0.11.1"
log = "0.4.20"
